
- Several sources of meaningless log messages from fiona._geometry about NULL
  geometries are avoided (#1264).
- The Parquet driver has been added to the list of supported drivers and will
  be available if your system's GDAL library links libarrow. Note that fiona
  wheels on PyPI do not include libarrow as it is rather large.
- Ensure that fiona._vendor modules are found and included.
- Docstrings for listdir and listlayers have been clarified and harmonized.
- Nose style test cases have been converted to unittest.TestCase (#1256).
- The munch package used by fio-filter and fio-calc is now vendored and patched
  to remove usage of the deprecated pkg_resources module (#1255).

1.9.3 (2023-04-10)
------------------

- Rasterio CRS objects are compatible with the Collection constructor and are
  now accepted (#1248).
- Enable append mode for fio-load (#1237).
- Reading a GeoJSON with an empty array property can result in a segmentation
  fault since version 1.9.0. This has been fixed (#1228).

1.9.2 (2023-03-20)
------------------

- Get command entry points using importlib.metadata (#1220).
- Instead of warning, transform_geom() raises an exception when some points
  can't be reprojected unless the caller opts in to partial reprojection. This
  restores the behavior of version 1.8.22.
- Add support for open options to all CLI commands that call fiona.open
  (#1215).
- Fix a memory leak that can occur when iterating over a dataset using strides
  (#1205).
- ZipMemoryFile now supports zipped GDB data (#1203).

1.9.1 (2023-02-09)
------------------

- Log a warning message when identically named fields are encountered (#1201).
- Avoid dependence on listdir order in tests (#1193).
- Prevent empty geometries arrays from appearing in __geo_interface__ (#1197).
- setuptools added to pyproject.toml. Its pkg_resources module is used by the
  CLI (#1191).

1.9.0 (2023-01-30)
------------------

- CITATION.txt has been replaced by a new CITATION.cff file and the credits